monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0275/A0275Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0275;

grammar A0275Super {

 scope Foo;

}